# fullstack-dioxus

./: Cargo.toml
backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2025-05-16-083616_init_database/: down.sql  up.sql
backend/migrations/2025-05-19-020553_add_values_actions/: down.sql  up.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/app_axum/: error.rs  mod.rs  server.rs  state.rs
backend/src/app_axum/handler/: auth.rs  health.rs  mod.rs
backend/src/app_axum/middleware/: layer.rs  mod.rs
backend/src/application/: auth_service.rs  mod.rs  user_service.rs
backend/src/diesel_impl/: action.rs  error.rs  mod.rs  permission.rs  pool.rs  role.rs  schema.rs  user.rs
backend/src/domain/: error.rs  mod.rs  user.rs
backend/src/domain/permission/: repo.rs
backend/src/domain/role/: repo.rs
backend/src/domain/security/: mod.rs  repo.rs  service.rs
backend/src/domain/user/: repo.rs
common_model/: Cargo.toml
common_model/src/: user.rs
dbdiagram/: database.sql
frontend/: .gitignore  Cargo.toml  README.md
frontend/assets/: main.css  tailwind.css
frontend/src/: main.rs
frontend/src/api/: request.ts  user.api.ts
frontend/src/components/: sidebar_item.rs
frontend/src/store/: state.rs
frontend/src/stores/: user.action.ts
frontend/src/utils/: formatSearch.ts  get-table-page-data.ts
