[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum ={version = "0.8.1", features = ["multipart"]} 
tower = "0.5.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.80"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util= "0.3.31"
lazy_static= "1.5.0"
jsonwebtoken="9"
uuid= {version = "1.12.0", features = ["v4"]}
time= "0.3"
serde_yaml= "0.9"
chrono={ version = "0.4.38", features = ["serde"] }
r2d2 = "0.8.10"
tower-cookies = "0.11.0"
tower-http = { version = "0.6", features = ["cors"] }

axum-extra={version = "0.10.0", features = ["query","form"]}

#hash
sha2= "0.10.8"
hex="0.4.3"

# support diesel
diesel={version= "2.2.7" , features=["mysql","chrono","r2d2"]}